--- a/AppBuilders2018-demo2/Base.lproj/Main.storyboard
+++ b/AppBuilders2018-demo2/Base.lproj/Main.storyboard
@@ -1,15 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="F0d-LZ-WGb">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="fLP-EE-tLQ">
+            <objects>
+                <navigationController id="F0d-LZ-WGb" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="mur-UP-cvY">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="9nO-xE-g5f"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YFV-ik-con" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-868" y="87"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -17,12 +34,117 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z8j-nA-AA5">
+                                <rect key="frame" x="0.0" y="64" width="375" height="50"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tp5-hI-885">
+                                        <rect key="frame" x="8" y="8" width="278" height="34"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="255" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3XZ-L8-6xL">
+                                        <rect key="frame" x="294" y="8" width="73" height="34"/>
+                                        <color key="backgroundColor" red="0.0" green="0.4823529412" blue="0.81960784310000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                        <inset key="contentEdgeInsets" minX="12" minY="8" maxX="12" maxY="9"/>
+                                        <state key="normal" title="Search">
+                                            <color key="titleColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="3XZ-L8-6xL" firstAttribute="top" secondItem="Z8j-nA-AA5" secondAttribute="topMargin" id="1VE-2F-58c"/>
+                                    <constraint firstItem="tp5-hI-885" firstAttribute="top" secondItem="3XZ-L8-6xL" secondAttribute="top" id="8fA-Ca-cFK"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="3XZ-L8-6xL" secondAttribute="trailing" id="A4K-rv-YFQ"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="3XZ-L8-6xL" secondAttribute="bottom" id="cmG-Z0-UUw"/>
+                                    <constraint firstAttribute="leadingMargin" secondItem="tp5-hI-885" secondAttribute="leading" id="kSA-Ql-Rm3"/>
+                                    <constraint firstItem="tp5-hI-885" firstAttribute="bottom" secondItem="3XZ-L8-6xL" secondAttribute="bottom" id="lnN-aV-R5t"/>
+                                    <constraint firstItem="3XZ-L8-6xL" firstAttribute="leading" secondItem="tp5-hI-885" secondAttribute="trailing" constant="8" id="nqy-BZ-4YX"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e9G-6A-lNc">
+                                <rect key="frame" x="0.0" y="114" width="375" height="553"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="e9G-6A-lNc" secondAttribute="bottom" id="Daw-0l-bKN"/>
+                            <constraint firstAttribute="trailing" secondItem="e9G-6A-lNc" secondAttribute="trailing" id="QXL-ET-h7N"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Z8j-nA-AA5" secondAttribute="trailing" id="Rke-lu-zep"/>
+                            <constraint firstItem="Z8j-nA-AA5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="b2T-Oy-6ll"/>
+                            <constraint firstItem="e9G-6A-lNc" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="fF6-Ei-Ykb"/>
+                            <constraint firstItem="Z8j-nA-AA5" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="jCr-FV-tyG"/>
+                            <constraint firstItem="e9G-6A-lNc" firstAttribute="top" secondItem="Z8j-nA-AA5" secondAttribute="bottom" id="nrn-eR-Hjr"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="Sdh-nr-hku"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="144.80000000000001" y="-41.829085457271368"/>
+        </scene>
+        <!--Grid Controller-->
+        <scene sceneID="WMT-v8-fs9">
+            <objects>
+                <collectionViewController storyboardIdentifier="GridController" id="lyC-SR-L8H" customClass="GridController" customModule="AppBuilders2018_demo2" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="62M-ij-Cs6">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="1" minimumInteritemSpacing="1" id="rrj-c4-fNT">
+                            <size key="itemSize" width="150" height="64"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="GridCell" id="97C-wJ-dEi" customClass="GridCell" customModule="AppBuilders2018_demo2" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="150" height="64"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                    <rect key="frame" x="0.0" y="0.0" width="150" height="64"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zAC-KO-MJO">
+                                            <rect key="frame" x="8" y="8" width="89" height="28"/>
+                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="252" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BPm-jI-LXc">
+                                            <rect key="frame" x="105" y="38" width="37" height="18"/>
+                                            <fontDescription key="fontDescription" type="system" weight="thin" pointSize="15"/>
+                                            <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </view>
+                                <color key="backgroundColor" white="0.87757759349999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottomMargin" secondItem="BPm-jI-LXc" secondAttribute="bottom" id="Ddv-9t-gGq"/>
+                                    <constraint firstItem="zAC-KO-MJO" firstAttribute="top" secondItem="97C-wJ-dEi" secondAttribute="topMargin" id="Kex-ac-KvA"/>
+                                    <constraint firstItem="zAC-KO-MJO" firstAttribute="leading" secondItem="97C-wJ-dEi" secondAttribute="leadingMargin" id="MHs-ra-0iX"/>
+                                    <constraint firstItem="BPm-jI-LXc" firstAttribute="leading" secondItem="zAC-KO-MJO" secondAttribute="trailing" constant="8" id="QPB-la-vGr"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="BPm-jI-LXc" secondAttribute="trailing" id="vW2-E3-vv2"/>
+                                    <constraint firstItem="BPm-jI-LXc" firstAttribute="top" secondItem="zAC-KO-MJO" secondAttribute="bottom" constant="2" id="w8k-PG-dpP"/>
+                                </constraints>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="lyC-SR-L8H" id="WPJ-B7-NMc"/>
+                            <outlet property="delegate" destination="lyC-SR-L8H" id="6OQ-uy-ozY"/>
+                        </connections>
+                    </collectionView>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VrQ-Kr-SbL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="145" y="689"/>
         </scene>
     </scenes>
 </document>
