--- a/AppBuilders2018-demo2/Base.lproj/Main.storyboard
+++ b/AppBuilders2018-demo2/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="9nO-xE-g5f"/>
+                        <segue destination="lyC-SR-L8H" kind="relationship" relationship="rootViewController" id="9qh-P4-nDS"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YFV-ik-con" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -36,7 +36,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z8j-nA-AA5">
-                                <rect key="frame" x="0.0" y="64" width="375" height="50"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="50"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tp5-hI-885">
                                         <rect key="frame" x="8" y="8" width="278" height="34"/>
@@ -67,7 +67,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e9G-6A-lNc">
-                                <rect key="frame" x="0.0" y="114" width="375" height="553"/>
+                                <rect key="frame" x="0.0" y="70" width="375" height="597"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                         </subviews>
@@ -96,16 +96,16 @@
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="62M-ij-Cs6">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="1" minimumInteritemSpacing="1" id="rrj-c4-fNT">
+                        <color key="backgroundColor" white="0.87757759349999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="rrj-c4-fNT">
                             <size key="itemSize" width="150" height="64"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="10" maxX="0.0" maxY="10"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="GridCell" id="97C-wJ-dEi" customClass="GridCell" customModule="AppBuilders2018_demo2" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="150" height="64"/>
+                                <rect key="frame" x="0.0" y="10" width="150" height="64"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                     <rect key="frame" x="0.0" y="0.0" width="150" height="64"/>
@@ -134,6 +134,10 @@
                                     <constraint firstAttribute="trailingMargin" secondItem="BPm-jI-LXc" secondAttribute="trailing" id="vW2-E3-vv2"/>
                                     <constraint firstItem="BPm-jI-LXc" firstAttribute="top" secondItem="zAC-KO-MJO" secondAttribute="bottom" constant="2" id="w8k-PG-dpP"/>
                                 </constraints>
+                                <connections>
+                                    <outlet property="label" destination="zAC-KO-MJO" id="9Rg-Ww-uPq"/>
+                                    <outlet property="marker" destination="BPm-jI-LXc" id="gkC-11-06B"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
@@ -141,6 +145,7 @@
                             <outlet property="delegate" destination="lyC-SR-L8H" id="6OQ-uy-ozY"/>
                         </connections>
                     </collectionView>
+                    <navigationItem key="navigationItem" id="K4f-U5-yA1"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VrQ-Kr-SbL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
