--- a/AppBuilders2018-demo2/Base.lproj/WaitStateView.xib
+++ b/AppBuilders2018-demo2/Base.lproj/WaitStateView.xib
@@ -13,31 +13,34 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="TKY-Yo-E3p" customClass="WaitStateView" customModule="AppBuilders2018_demo2" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="417" height="516"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please wait..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2j3-hS-ujK">
-                    <rect key="frame" x="135.5" y="333" width="104" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please wait..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2j3-hS-ujK">
+                    <rect key="frame" x="156.5" y="257.5" width="104" height="21"/>
                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="18"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="iJx-GT-gXa">
-                    <rect key="frame" x="169.5" y="288" width="37" height="37"/>
+                    <rect key="frame" x="190.5" y="212.5" width="37" height="37"/>
                     <color key="color" cocoaTouchSystemColor="darkTextColor"/>
                 </activityIndicatorView>
             </subviews>
             <color key="backgroundColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="iJx-GT-gXa" firstAttribute="centerX" secondItem="2j3-hS-ujK" secondAttribute="centerX" id="46a-t8-Zr3"/>
-                <constraint firstItem="2j3-hS-ujK" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="c86-OA-48a" secondAttribute="leading" id="JZa-rA-AjS"/>
+                <constraint firstItem="2j3-hS-ujK" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="c86-OA-48a" secondAttribute="leading" constant="8" id="JZa-rA-AjS"/>
                 <constraint firstItem="2j3-hS-ujK" firstAttribute="centerX" secondItem="c86-OA-48a" secondAttribute="centerX" id="dZN-IT-ChQ"/>
                 <constraint firstItem="2j3-hS-ujK" firstAttribute="centerY" secondItem="c86-OA-48a" secondAttribute="centerY" id="ekx-Az-YaV"/>
+                <constraint firstItem="iJx-GT-gXa" firstAttribute="top" relation="greaterThanOrEqual" secondItem="c86-OA-48a" secondAttribute="top" constant="8" id="fSO-2L-qCN"/>
                 <constraint firstItem="2j3-hS-ujK" firstAttribute="top" secondItem="iJx-GT-gXa" secondAttribute="bottom" constant="8" id="kL3-Oa-QVf"/>
-                <constraint firstItem="c86-OA-48a" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="2j3-hS-ujK" secondAttribute="trailing" id="lO5-Jw-zYv"/>
+                <constraint firstItem="c86-OA-48a" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="2j3-hS-ujK" secondAttribute="trailing" constant="8" id="lO5-Jw-zYv"/>
             </constraints>
+            <nil key="simulatedTopBarMetrics"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="c86-OA-48a"/>
-            <point key="canvasLocation" x="-824" y="-549.17541229385313"/>
+            <point key="canvasLocation" x="-803.5" y="-474"/>
         </view>
     </objects>
 </document>
