--- a/AppBuilders2018-demo2/Base.lproj/Main.storyboard
+++ b/AppBuilders2018-demo2/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="lyC-SR-L8H" kind="relationship" relationship="rootViewController" id="9qh-P4-nDS"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="4MA-7q-BRF"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YFV-ik-con" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -36,7 +36,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z8j-nA-AA5">
-                                <rect key="frame" x="0.0" y="20" width="375" height="50"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="50"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tp5-hI-885">
                                         <rect key="frame" x="8" y="8" width="278" height="34"/>
@@ -53,6 +53,9 @@
                                         <state key="normal" title="Search">
                                             <color key="titleColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
+                                        <connections>
+                                            <action selector="initiateSearch:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jz2-BF-ZvA"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
@@ -67,8 +70,16 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e9G-6A-lNc">
-                                <rect key="frame" x="0.0" y="70" width="375" height="597"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <rect key="frame" x="0.0" y="114" width="375" height="553"/>
+                                <color key="backgroundColor" red="1" green="0.57647058819999997" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" id="Yvo-5M-zrP"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="Yvo-5M-zrP"/>
+                                    </mask>
+                                </variation>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
@@ -77,13 +88,17 @@
                             <constraint firstAttribute="trailing" secondItem="e9G-6A-lNc" secondAttribute="trailing" id="QXL-ET-h7N"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Z8j-nA-AA5" secondAttribute="trailing" id="Rke-lu-zep"/>
                             <constraint firstItem="Z8j-nA-AA5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="b2T-Oy-6ll"/>
-                            <constraint firstItem="e9G-6A-lNc" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="fF6-Ei-Ykb"/>
+                            <constraint firstItem="e9G-6A-lNc" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" priority="900" id="fF6-Ei-Ykb"/>
                             <constraint firstItem="Z8j-nA-AA5" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="jCr-FV-tyG"/>
                             <constraint firstItem="e9G-6A-lNc" firstAttribute="top" secondItem="Z8j-nA-AA5" secondAttribute="bottom" id="nrn-eR-Hjr"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="Sdh-nr-hku"/>
+                    <connections>
+                        <outlet property="containerView" destination="e9G-6A-lNc" id="xgh-jz-55P"/>
+                        <outlet property="containerWidthConstraint" destination="Yvo-5M-zrP" id="M0i-jY-1bT"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -96,7 +111,7 @@
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="62M-ij-Cs6">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="0.87757759349999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="rrj-c4-fNT">
                             <size key="itemSize" width="150" height="64"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
