--- a/AppBuilders2018-demo2/Base.lproj/Main.storyboard
+++ b/AppBuilders2018-demo2/Base.lproj/Main.storyboard
@@ -69,7 +69,7 @@
                                     <constraint firstItem="3XZ-L8-6xL" firstAttribute="leading" secondItem="tp5-hI-885" secondAttribute="trailing" constant="8" id="nqy-BZ-4YX"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e9G-6A-lNc">
+                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e9G-6A-lNc">
                                 <rect key="frame" x="0.0" y="114" width="375" height="553"/>
                                 <color key="backgroundColor" red="1" green="0.57647058819999997" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
